<resources>
    <string name="app_name">Bendis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BendisTitle">Bendis</string>
    <string name="DaxilOl">Daxil olun</string>
    <string name="HesabYaradin">Hesab yaradın</string>
    <string name="email">E-Mail</string>
    <string name="Password">Şifrə</string>
    <string name="ForgotPass">Şifrəmi unutdum</string>
    <string name="Login">Daxil ol</string>
    <string name="Or">və ya</string>
    <string name="LoginGoogle">Google ilə daxil ol</string>
    <string name="RegisterButton">Qeydiyyatdan keç</string>
    <string name="SexsiMelumatlar">Şəxsi məlumatlar</string>
    <string name="Name">Ad</string>
    <string name="Surname">Soyad</string>
    <string name="Birth">Doğum Tarixi</string>
    <string name="Gender">Cins</string>
    <string name="phone">Telefon nömrəsi</string>
    <string name="TelephoneNumber">Telefon Nömrəsi</string>
    <string name="Save">Yadda saxla</string>
    <string name="Basket">Səbətim - 2 məhsul</string>
    <string name="Apply">Tətbiq et</string>
    <string name="ChangePassword">Şifrənin yenilənməsi</string>
    <string name="ChangeEmail">E-mail yenilənməsi</string>
    <string name="CurrentPassword">Cari şifrə</string>
    <string name="NewPassword">Yeni şifrə</string>
    <string name="AgainNewPassword">Yeni şifrə (təkrar)</string>
    <string name="Update">Yenilə</string>
    <string name="CurrentEmail">Mövcud e-mail</string>
    <string name="NewEmail">Yeni E-Mail</string>
    <string name="AgainNewEmail">Yeni E-Mail (təkrar)</string>
    <string name="OrderNumber">Sifariş № </string>
    <string name="Number">1234567890</string>
    <string name="OrderDate">4 yanvar 2025, 15:26</string>
    <string name="Seller">Satıcı:</string>
    <string name="SellerName">Shop</string>
    <string name="MoreAboutTheOrder">Sifariş haqqında daha ətraflı</string>
    <string name="TotalPayment">Toplam ödəniş</string>
    <string name="MyOrders">Mənim sifarişlərim</string>
    <string name="Payment">538.67 ₼</string>
    <string name="Delivered">Çatdırıldı</string>
    <string name="GenderText2">Cinsiyyət</string>
    <string name="Woman">Qadın</string>
    <string name="Man">Kişi</string>
    <string name="Profile">Profil</string>
    <string name="UploadImage">Şəkil yüklə</string>
    <string name="ChangePassword2">Şifrəni dəyişdir</string>
    <string name="ChangeEmail2">E-mail dəyişdir</string>
    <string name="MyAccount">Hesabım</string>
    <string name="DefaultUser">Selcan Yusifova</string>
    <string name="Operation">Əməliyyat</string>
    <string name="MyComment">Rəylərim</string>
    <string name="Messages">Mesajlar</string>
    <string name="OpenMagazine">Mağazanı aç</string>
    <string name="DeliveryAddrress">Çatdırılma ünvanları</string>
    <string name="AboutUs">Haqqımızda</string>
    <string name="Settings">Parametrlər</string>
    <string name="City">Şəhər</string>
    <string name="Baku">Bakı</string>
    <string name="Language">Dil</string>
    <string name="Azerbaijan">Azərbaycan</string>
    <string name="Help">Kömək</string>
    <string name="HelpAndSupport">Yardım və dəstək</string>
    <string name="Questions">Ən çox verilən suallar</string>
    <string name="Exit">Çıxış</string>
    <string name="DeleteAccount">Hesabı sil</string>
    <string name="MyAddress">Ünvanlarım</string>
    <string name="MyAddressText2">Mənim ünvanlarım</string>
    <string name="MyAddressText3">Hələ ünvan əlavə etməmisiniz. Çatdırılma ünvanınızı əlavə edərək alış-verişinizi sürətləndirin!</string>
    <string name="AddAddress">Ünvan əlavə et</string>
    <string name="Region">Rayon</string>
    <string name="ChooseTheAddress">Xəritədə ünvanı seç</string>
    <string name="blockApartment">Blok/Mənzil</string>
    <string name="infoContact">Əlaqə məlumatları</string>
    <string name="defaultPhone">(+994) ** *** ** **</string>
    <string name="address">Ünvan</string>
</resources>