<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.LoginFragment">


    <TextView
        android:id="@+id/appNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:layout_marginTop="24dp"
        android:text="@string/BendisTitle"
        android:textColor="@color/main_color"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/createAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/HesabYaradin"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="@+id/EmailTIL"
        app:layout_constraintTop_toBottomOf="@+id/appNameTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/text_hint_color"
        app:boxStrokeColor="@color/main_color"
        app:cursorColor="@color/main_color"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/text_hint_color"
        app:boxStrokeColor="@color/main_color"
        app:cursorColor="@color/main_color"
        app:endIconDrawable="@drawable/eyeclose"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/Password"
            android:inputType="text|textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/GenderTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/GenderText2"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/EmailTIL"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTIL" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/GenderRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/GenderTv"
        app:layout_constraintTop_toBottomOf="@id/GenderTv">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/FemaleRb"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:fontFamily="@font/poppins"
            android:text="@string/Woman"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/MaleRb"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/white"
            android:fontFamily="@font/poppins"
            android:text="@string/Man"
            android:textSize="14sp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/poppins"
        android:text="@string/RegisterButton"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenderRg" />


    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/Or"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterButton" />

    <Button
        android:id="@+id/GoogleBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOr"
        app:strokeColor="#737373"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/LoginGoogle"
        android:textColor="@color/text_color"
        app:drawableLeftCompat="@drawable/google"
        app:layout_constraintBottom_toBottomOf="@+id/GoogleBtn"
        app:layout_constraintEnd_toEndOf="@+id/GoogleBtn"
        app:layout_constraintStart_toStartOf="@+id/GoogleBtn"
        app:layout_constraintTop_toTopOf="@+id/GoogleBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>