<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVieww3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:cardCornerRadius="28dp"
        android:layout_marginStart="10dp"
        app:cardElevation="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">


            <TextView
                android:id="@+id/Order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OrderNumber"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Number"
                android:textSize="15sp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/Order"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/delivered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Delivered"
                android:fontFamily="@font/poppins"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:layout_marginStart="120dp"
                app:layout_constraintStart_toEndOf="@id/Number"
                app:layout_constraintEnd_toStartOf="@id/checkMark"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/checkMark"
                android:layout_width="14sp"
                android:layout_height="10sp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6sp"
                android:layout_marginStart="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/check_mark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/delivered"/>

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OrderDate"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="6dp"
                android:textSize="15sp"
                android:textColor="@color/text_hint_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seller"
                android:textSize="15sp"
                android:text="@string/Seller"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/text_hint_color"
                app:layout_constraintTop_toBottomOf="@id/orderDate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sellerName"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/SellerName"
                app:layout_constraintTop_toBottomOf="@id/orderDate"
                app:layout_constraintStart_toEndOf="@id/seller" />

            <ImageView
                app:layout_constraintTop_toBottomOf="@id/sellerName"
                android:id="@+id/appleAirpodsMax"
                android:layout_width="112sp"
                android:layout_height="105sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/apple_airpods_max" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moreInfo"
                android:layout_marginTop="20dp"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/poppins"
                android:text="@string/MoreAboutTheOrder"
                app:layout_constraintTop_toBottomOf="@id/appleAirpodsMax"/>

            <TextView
                android:id="@+id/totalPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/text_hint_color"
                android:fontFamily="@font/poppins"
                app:layout_constraintEnd_toStartOf="@id/payment"
                android:text="@string/TotalPayment"
                android:layout_marginStart="23dp"
                app:layout_constraintTop_toBottomOf="@id/appleAirpodsMax"
                app:layout_constraintStart_toEndOf="@id/moreInfo" />

            <TextView
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:text="@string/Payment"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appleAirpodsMax"
                app:layout_constraintStart_toEndOf="@id/totalPayment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>