<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.MyAddressFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddress"
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/text_hint_color"
        android:background="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/back"
            android:id="@+id/myAddressTv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MyAddress"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/myAddressTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/MyAddressTv2"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/MyAddressText2"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyAddressText3"
        android:id="@+id/MyAddressTv3"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MyAddressTv2" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/location_icon2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddress"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/addAddressBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/AddAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/main_color"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/main_color"
        app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>